# lexus_bringup

./: .gitignore  192.168.10-metadata.json  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  package.xml
.github/workflows/: deploy-pages.yml
config/: tieriv_c2_camera_params_0.yaml
config/camera/: tieriv_c2_camera_info_0.yaml  tieriv_c2_camera_info_1.yaml  tieriv_c2_camera_params_0.yaml  tieriv_c2_camera_params_1.yaml  usb_web_params.yaml  zed_default_common.yaml
config/lidar/: ouster_config_center.yaml  ouster_config_comp.yaml  ouster_config_left.yaml  ouster_config_right.yaml
docs/wiki/: pacmod_actuation.md  sensorset2026-l.md
etc/: arnl_demo_autoware.sh  arnl_demo_sensors.sh  arnl_stop_autoware.sh  arnl_stop_sensors.sh  demo_static.sh  foxglove1.sh  lexus00.rviz  mcap_writer_options.yaml  record_mcap1.sh  record_mcap2.sh  record_mcap3.sh  stop_all.sh
include/lexus_bringup/: pcl_merger.hpp
launch/: 3d_marker.launch.py  foxglove_bridge.launch.py  rviz00.launch.py  speed_control.launch.py  tf_static.launch.py
launch/drivers/: 192.168.10-metadata.json  cam_tieriv_c2_all.launch.py  cam_usb_web.launch.py  cam_zed_default.launch.py  cam_zed_driver.launch.py  cam_zed_zed2.launch.py  can_and_status.launch.py  can_pacmod3.launch.xml  can_pacmod_game.launch.xml  gps_duro_dual_heading.launch.py  gps_duro_heading.launch.py  gps_duro_reference.launch.py  gps_nova.launch.py  gps_nova_a.launch.py  gps_nova_b.launch.py  imu_microstrain.launch.py  lidar_all_comp.launch.py  lidar_center_comp.launch.py  lidar_config_comp.yaml  lidar_left_comp.launch.py  lidar_luminar.launch.py  lidar_os_center.launch.py  lidar_os_driver.launch.py  lidar_os_left.launch.py  lidar_os_merged.launch.py  lidar_os_right.launch.py  lidar_right_comp.launch.py  mako1.launch.py  mako2.launch.py  mako_dual.launch.py  mako_dual_halfres.launch.py  mako_save_cfg.launch.py  os_32_comp_b.launch.py  os_32_left_a.launch.py  os_32_left_b.launch.py  os_32_right_a.launch.py  os_32_right_a_driver_config.yaml  os_32_right_b.launch.py  os_32_right_b.yaml  os_64_center_a.launch.py  (+25 more)
launch/drivers/mako_cfg/: initparam.txt  mako1.yaml  mako1_halfres.yaml  mako2.yaml  mako2_halfres.yaml  param_filter.txt
launch/perception/: ground_filt_patchworkpp_a.launch.py  lidar_cluster_a.launch.py  lidar_odom_kiss_icp_a.launch.py
quick_start/: index.html
search/: search_index.json
site/stylesheets/: extra.css
src/: current_pose_from_tf.cpp  nova_oem7_to_tf.cpp  odom.cpp  path_steering_and_kmph.cpp  pcl_merger.cpp  speed_control.cpp  vehicle_status_from_pacmod.cpp
wiki/pacmod_actuation/: index.html
wiki/sensorset2026-l/: index.html
